@@ -1,5 +1,7 @@
 package br.com.dbc.vemser.financeiro.service;
 
+import br.com.dbc.vemser.financeiro.dto.CartaoDTO;
+import br.com.dbc.vemser.financeiro.dto.CompraDTO;
 import br.com.dbc.vemser.financeiro.dto.ItemCreateDTO;
 import br.com.dbc.vemser.financeiro.dto.ItemDTO;
 import br.com.dbc.vemser.financeiro.exception.BancoDeDadosException;
@@ -11,18 +13,22 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 public class ItemService extends Servico {
 
     private final ItemRepository itemRepository;
+    private final CartaoService cartaoService;
     private final ContaService contaService;
+    private final CompraService compraService;
 
-    public ItemService(ItemRepository itemRepository, ObjectMapper objectMapper, ContaService contaService) {
+    public ItemService(ItemRepository itemRepository, ObjectMapper objectMapper, CartaoService cartaoService, ContaService contaService, CompraService compraService) {
         super(objectMapper);
         this.itemRepository = itemRepository;
+        this.cartaoService = cartaoService;
         this.contaService = contaService;
+        this.compraService = compraService;
     }
 
     public List<ItemDTO> adicionar(List<ItemCreateDTO> itensCreateDTO, Integer numeroConta, String senha) throws BancoDeDadosException, RegraDeNegocioException {
@@ -38,18 +44,6 @@ public class ItemService extends Servico {
         return itensDTO;
     }
 
-    public ItemDTO atualizar(Integer idItem, ItemCreateDTO itemCreateDTO) throws BancoDeDadosException {
-        itemRepository.retornarItem(idItem);
-        Item item = objectMapper.convertValue(itemCreateDTO, Item.class);
-        item.setIdItem(idItem);
-        Item itemUpdated = itemRepository.atualizar(item);
-        return objectMapper.convertValue(itemUpdated, ItemDTO.class);
-    }
-
-    public ItemDTO retornarItem(Integer idItem) throws BancoDeDadosException, RegraDeNegocioException {
-        return objectMapper.convertValue(this.itemRepository.retornarItem(idItem), ItemDTO.class);
-    }
-
     public List<ItemDTO> listar(String login, String senha) throws BancoDeDadosException, RegraDeNegocioException {
         if (login.equals("admin") && senha.equals("abacaxi")) {
             return itemRepository.listar().stream()
@@ -59,15 +53,33 @@ public class ItemService extends Servico {
             throw new RegraDeNegocioException("Credenciais de Administrador inválidas!");
         }
     }
-
     public List<ItemDTO> listarItensPorIdCompra(Integer idCompra) throws BancoDeDadosException, RegraDeNegocioException {
         return itemRepository.listarItensPorIdCompra(idCompra).stream()
                 .map(item -> objectMapper.convertValue(item, ItemDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public boolean deletar(Integer idItem, Integer numeroConta, String senha) throws BancoDeDadosException, RegraDeNegocioException {
-        this.contaService.validandoAcessoConta(numeroConta, senha);
-        return itemRepository.deletar(idItem);
+    public List<ItemDTO> listarItensPorIdCompra(Integer idCompra, Integer numeroConta, String senha) throws BancoDeDadosException, RegraDeNegocioException {
+        List<ItemDTO> itens = itemRepository.listarItensPorIdCompra(idCompra).stream()
+                .map(item -> objectMapper.convertValue(item, ItemDTO.class))
+                .toList();
+        if(itens.size() == 0){
+            throw new RegraDeNegocioException("Id da compra não existe!");
+        }else{
+            boolean exibir = false;
+            for(CartaoDTO cartao : cartaoService.listarPorNumeroConta(numeroConta)){
+                for(CompraDTO compra: compraService.retornarComprasCartao(cartao.getNumeroCartao(), numeroConta, senha)){
+                    if(compra.getIdCompra().equals(idCompra)){
+                        exibir = true;
+                        break;
+                    }
+                }
+            }
+            if(exibir){
+                return itens;
+            }else{
+                throw new RegraDeNegocioException("Essa compra não te pertence!");
+            }
+        }
     }
 }
